Fix search backdrop z-index

--- a/src/design/plone/theme/theme/sass/components/_header.scss
+++ b/src/design/plone/theme/theme/sass/components/_header.scss
@@ -289,7 +289,7 @@
 
     .searchOpened {
         &:after {
-            z-index: 200;
+            z-index: 100;
         }
     }
 }
